Remove incompatible log4j in pom.xml and surefire causing build issues and cleanup mvn warnings (#296)
* Remove incompatible log4j between surefire plugins and the one GenomicsDB uses.
* Cleaned up and suppressed unchecked and deprecation warnings, to figure out real mvn issues more easily.
* brew install lcov installs the new 2.0 which breaks a lot of our code. Need to wait for this 2.x version to be hardened a little before we fix the errors with changes in our source code and/or invoke lcov with additional --ignore-errors arguments. The scripts for macOS now explicitly install version 1.16 for non-breaking macOS builds.